package gameZeldiablo.Zeldiablo.Cases;

import gameZeldiablo.Zeldiablo.Entities.Entite;

public interface Action {
    public abstract void onStepOn(Entite entite);
}
